<resources>
    <string name="app_version">App Version: %1$s</string>
    <string name="server_version">Server: %1$s</string>
    <string name="hub_version">Hub Version: %1$s</string>
    <string name="app_name">Maxim Wellness Suite</string>
    <string name="maxim_hsp">Maxim Health Sensor Platform</string>
    <string name="spo2">Pulse Oximetry</string>
    <string name="bpt">Blood Pressure Trending</string>
    <string name="whrm">Optical Heart Rate Measurement</string>
    <string name="whrm_toolbar">Optical HRM</string>
    <string name="hrv">Heart Rate Variability</string>
    <string name="respiratory">Respiratory Rate</string>
    <string name="sleep_quality">Sleep Quality</string>
    <string name="stress">Stress</string>
    <string name="sports_coaching">Sports Coaching</string>
    <string name="sports_coaching_alpha">Sports Coaching\n(alpha)</string>
    <string name="ppg_signal">PPG Signal</string>
    <string name="ppg_signal_scale_seconds">4 seconds</string>
    <string name="channel_ir">IR</string>
    <string name="channel_red">Red</string>
    <string name="channel_green">Green</string>
    <string name="channel_green1">Green-1</string>
    <string name="channel_green2">Green-2</string>
    <string name="monitoring_start">Start Monitoring</string>
    <string name="monitoring_stop">Stop Monitoring</string>
    <string name="log_to_file">Log to File</string>
    <string name="log_to_flash">Log to Flash</string>
    <string name="log_user_info">Log User Info</string>
    <string name="log_file_saved_to">Log file saved to %1$s</string>
    <string name="settings">Settings</string>
    <string name="spo2_settings">SpO2 Settings</string>
    <string name="whrm_settings">WHRM Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="measurement_result_ready_to_start_message">Ready to Start</string>
    <string name="measurement_result_measuring_message">Measuring…</string>
    <string name="measurement_result_timeout_message">TIMEOUT</string>
    <string name="measurement_result_warning_message">Keep still with the watch facing up</string>
    <string name="measurement_result_failure_message">Check wrist band tightness &amp; placement and keep your arm still</string>
    <string name="spo2_algorithm_mode_one_shot">One Shot</string>
    <string name="spo2_algorithm_mode_continuous">Continuous</string>
    <string name="spo2_algorithm_mode">Algorithm Mode</string>
    <string name="snr">Low SNR</string>
    <string name="signalQuality">Signal Quality</string>
    <string name="motion">Motion</string>
    <string name="pi">Low PI</string>
    <string name="reliable_r">Reliable R</string>
    <string name="respiration_rate">Respiration Rate</string>
    <string name="time_domain_metrics">Time Domain Metrics</string>
    <string name="frequency_domain_metrics">Frequency Domain Metrics</string>
    <string name="avnn">avnn</string>
    <string name="sdnn">sdnn</string>
    <string name="rmssd">rmssd</string>
    <string name="pnn50">pnn50</string>
    <string name="ulf">ulf</string>
    <string name="vlf">vlf</string>
    <string name="lf">lf</string>
    <string name="hf">hf</string>
    <string name="lfOverHf">lf/hf</string>
    <string name="totPwr">totPwr</string>
    <string name="ibi">IBI</string>
    <string name="ibiRr">Inter Beat Interval(ms)</string>
    <string name="write_your_command">Write your command</string>
    <string name="send_command">Send Command</string>
    <string name="send_arbitrary_command">Send Arbitrary Command</string>
    <string name="send">Send</string>
    <string name="enable_scd">Enable Scd</string>
    <string name="reference_device_title">HRM Reference Device</string>
    <string name="polar_contact_detected">Contact Detected?</string>
    <string name="polar_contact_detected_yes">YES</string>
    <string name="polar_contact_detected_no">NO</string>
    <string name="polar_heart_rate">Heart Rate</string>
    <string name="polar_heart_rate_unit">BPM</string>
    <string name="polar_empty_value">--</string>
    <string name="polar_devices">Polar HRM Chest Straps</string>
    <string name="write_sampled_mode_cycle_time">Write Sample Mode Cycle Time</string>
    <string name="sample_mode_cycle_time">Sample Mode Cycle Time</string>
    <string name="write_low_power_cycle_time">Write Low Power Cycle Time</string>
    <string name="empty_value">--</string>
    <string name="ble_connection_connect">Connect</string>
    <string name="ble_connection_connecting_message">Connecting</string>
    <string name="ble_connection_search_device">Search Device</string>
    <string name="ble_connection_change_device">Change Device</string>
    <string name="ble_connection_disconnect">Disconnect</string>
    <string name="ble_connection_unknown_device_name">N/A</string>
    <string name="ble_connection_battery_level_unknown">Unknown</string>
    <string name="ble_connection_battery_level">%1$d%%</string>
    <string name="ble_connection_battery_level_charging">Charging, %1$d%%</string>
    <string name="ble_connection_lost_title">Bluetooth connection is lost!</string>
    <string name="ble_connection_device_disconnected_message">Device has been disconnected.</string>
    <string name="ble_connection_ref_device_disconnected_message">Reference device has been disconnected.</string>
    <string name="ble_connection_right_button_text">Reconnect</string>
    <string name="ble_connection_left_button_text">Search</string>
    <string name="ble_connection_middle_button_text">Cancel</string>
    <string name="ble_connection_back_button_text">Cancel</string>
    <string name="whrm_algorithm_mode">WHRM Algorithm Mode</string>
    <string name="whrm_algorithm_mode_continuous">Continuous Mode</string>
    <string name="whrm_algorithm_mode_sampled">Sampled Mode</string>
    <string name="whrm_algorithm_mode_low_power">Low Power Mode</string>
    <string name="freq_metrics_unit">-- ms²</string>
    <string name="time_metrics_unit">-- ms</string>
    <string name="rr_unit">breath/min</string>
    <string name="single_selection">Single Selection</string>
    <string name="info">Info</string>
    <string name="whrm_info">  Maxim Wearable Heart Rate Monitoring (WHRM) algorithm utilizes
        synchronized 3-axis accelerometer and PPG data to provide several end-user friendly
        fitness tracking outputs like heart rate and activity related statistics e.g. step count,
        burned calories and activity class of the user. The PPG (photoplethysmography) signal can be
        gathered from contractions of ventricles in finger, wrist, ear, toe, chest etc. </string>
    <string name="spo2_info">  Pulse oximeter is a lightweight, small and noninvasive optical devices
        to monitor the amount of oxygen carried in the blood. Pulse oximeter devices measure oxygen
        saturation by illuminating the skin with red and near-infrared (IR) lights and measure
        changes in light absorption of oxygenated (oxy-hemoglobin, HbO2) and deoxygenated blood
        (deoxy-hemoglobin, RHb) using two light wavelengths. </string>
    <string name="hrv_info">  HRV tends to be low when we\'re in a fight-or-flight mode and high when
        we\'re more relaxed. High HRV is generally associated with greater cardiovascular fitness.
        The electrocardiogram test is the gold standard for assessing HRV. However, wearable devices
        with sophisticated algorithms are now making this data more accessible to more people. Since
        HRV provides insights into our ANS, which regulates our heart rate (HR) and blood pressure,
        it can be considered as the most important general wellness parameter.HRV gives us some
        clues about potential cardiac conditions. Over time, higher HRV can indicate increased
        resilience, while lower HRV can point to chronic stress. HRV can be increased by changes in
        behavior: quitting smoking, losing weight if needed, exercising, and managing stress
        and etc. </string>
    <string name="resp_info">  Using PPG, we can measure respiration induced features. One of these
        features is Respiratory Sinus Arrhythmia (RSA) which causes heart rate change during
        respiratory events. Another feature we can measure is that the effect on the venous volume
        of intrathoracic pressure changes during respiratory cycle. After processing these features,
        our solution can report very accurate respiration rate estimates. </string>
    <string name="stress_info">  Stress releases a hormone called adrenaline that quickens breath
        increases HR and Blood Pressure, known as \"fight or flight response\". Deep breathing
        exercise therefore can be suggested to shift body and mind into more relaxed state.\n
        In literature, most of the wearable stress monitoring studies use galvanic skin response,
        muscle tension, blood pressure and skin temperature devices as well as HR monitoring devices.
        Maxim\'s stress estimation methods use accelerometer and PPG data (HR, HRV) solely.</string>
    <string name="readiness_info">  Readiness score determines how much you are ready for the day.
        \n\n  It is scaled between 1–100.\n\n  Taken early first thing in the morning.\n\n  Sit comfortably
        and relax a few minutes before starting.</string>
    <string name="vo2max_info">  VO2Max is a single best indicator of fitness and cardiovascular health.
        \n\n  VO2Max score ranges between 1-100.\n\n  This function needs 3-6 minutes of data collected
        from the user while they are sitting in a relax state. Relax state is where user is fully recovered
        from last training and not effected by any kind of food, drug or alcohol.</string>
    <string name="epoc_recovery_info">  EPOC is an abbreviation for Excess Post–Exercise Oxygen Consumption.
        To estimate their EPOC value, user needs to start the algorithm after training and collect data for 5–6
        minutes in resting state.</string>
    <string name="recovery_time_info">  Recovery time is the amount of the time until user reaches to their homeostasis.
        Algorithm needs to gather 2–3 minutes of data from user to estimate their recovery time.</string>
    <string name="fitness_age_info">  The fitness age calculation is based on how fit you are, rather
        than your actual age.\n\n  It uses VO2Max values measured and stored in history.</string>
    <string name="alignment_successful">Auto alignment is done successfully.</string>
    <string name="alignment_fail">ECG vs PPG auto alignment cannot be completed. The alignment should be done manually. Please refer to alignment section in the MAXREFDES103 user guide.</string>
    <string name="confidence">Confidence</string>
    <string name="add_annotation">Add Annotation</string>
    <string name="readiness">Readiness</string>
    <string name="resting_vo2max">Resting VO2Max</string>
    <string name="epoc_recovery">EPOC Recovery</string>
    <string name="recovery_time">Recovery Time</string>
    <string name="fitness_age">Fitness Age</string>
    <string name="temp">Temperature</string>
    <string name="ecg">Electrocardiogram</string>
    <string name="archive">Archive</string>
    <string name="flash_log_parser">Flash Log Parser</string>
    <string name="hr_alignment">HR Alignment</string>
    <string name="calibration">Calibration</string>
    <string name="sbp">Systolic</string>
    <string name="dbp">Diastolic</string>
    <string name="start">Start</string>
    <string name="repeat">Repeat</string>
    <string name="enable_mfio">Enable MFIO</string>
    <string name="enable_scdsm">Enable Scd SM</string>
    <string name="new_calibration">New</string>
    <string name="user_profile">User Profile</string>
    <string name="low_power_mode">Low Power Mode</string>
</resources>